<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/emailAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailC"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        app:layout_constraintLeft_toLeftOf="@+id/greeting"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTitle"
        app:layout_constraintLeft_toLeftOf="@+id/emailAddressTitle"
        android:textSize="20sp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/fullnameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullnameA"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/greeting"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fullnameTitle"
        app:layout_constraintLeft_toLeftOf="@+id/emailAddressTitle"
        android:textSize="20sp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/ageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ageA"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        app:layout_constraintLeft_toLeftOf="@+id/fullnameTitle"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ageTitle"
        app:layout_constraintLeft_toLeftOf="@+id/fullnameTitle"
        android:textSize="20sp"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/signOut"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textStyle="bold"
        android:backgroundTint="@color/green"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>